refactor image folders

--- a/ianSnyderPhotography.html
+++ b/ianSnyderPhotography.html
@@ -83,7 +83,7 @@
   <div id="contact-section" data-brackets-id='171' class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top" id="contact">
     <h3 data-brackets-id='172' class="w3-center">Contact</h3>
     <hr data-brackets-id='173'>
-    <p data-brackets-id='174'>All photos are property of Ian Snyder. For prints and permission to use please contact me. I am available for hire if the job is right.</p>
+    <p data-brackets-id='174'>All photos are property of Ian Snyder. For prints and permission to use please contact me. I am available for hire if the job is right. Contact me through instagram for inquiries and questions.</p>
 
     <form data-brackets-id='175' action="/action_page.php" target="_blank">
       <div data-brackets-id='176' class="w3-section">
