--- a/instagramPortfolio.html
+++ b/instagramPortfolio.html
@@ -38,7 +38,9 @@ h1 {letter-spacing: 6px}
 <!-- Photo Grid -->
 <div class="w3-row-padding" style="margin-bottom:128px">
  
-  <div class='embedsocial-instagram' data-ref="f328a6fb6d85d9f78167765e4f32a5f53a4edc76"></div><script>(function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/embedscript/in.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialInstagramScript"));</script>
+  <div class='embedsocial-instagram' data-ref="f328a6fb6d85d9f78167765e4f32a5f53a4edc76">
+    
+  </div><script>(function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/embedscript/in.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialInstagramScript"));</script>
 
 </div>
   
