--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <a href="" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16"> </a>
         -->
         <a href="ComputerSciencePortfolio.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Computer Science Portfolio </a>
+        <a href="Slack_JSON/upskillChannel.html" target="" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Slack Channel Upskill </a>
        
         
     </div>
