updated banner image

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
       <!-- Throw links here -->
     <div class="w3-padding-16">
-        <img src="../images/downsizedImages/GreatSandDunesPano.jpg" style="width: 100%">  
+        <img src="images/downsizedImages/sparkssouthsistersunset.jpg" style="width: 100%">  
         <a href="ianSnyderPhotography.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Photography Site</a>
         <!--
         <a href="" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16"> </a>
