--- a/Slack_JSON/upskillChannel.html
+++ b/Slack_JSON/upskillChannel.html
@@ -22,14 +22,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 <!-- Navbar -->
 <div class="w3-container">
   <h1>Upskill Data</h1>
-  <!-- <p>External Data from test.json</p>
-  <p id="test"></p> -->
+  <p>External Data from test.json</p>
+  <p id="test"></p>
   <h2>External Data from Colab Slack Data</h2>
   <p>SUBJECT:</p>
   <p id="external-json"></p>
   <p>FROM:</p>
   <p id="external-json-two"></p>
-  <p>URL:</p>
+  <p>LINKS/PREVIEW:</p>
   <p id="external-json-three"></p>
 
 </div>
@@ -39,12 +39,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 
 <script type="text/javascript" src="/test.json"></script>
 <script>
-// fetch("test.json")
-// .then(response => response.json())
-// .then(data => {
-//   document.getElementById("test").innerHTML = data.name
-// })
-fetch("/Co_Lab_Slack_export_Jun_9_2021_Jun_15_2021/upskillor/2021-06-09.json")
+fetch("test.json")
+.then(response => response.json())
+.then(data => {
+  document.getElementById("test").innerHTML = data.name
+})
+fetch("Co_Lab_Slack_export_Jun_9_2021_Jun_15_2021/upskillor/2021-06-09.json")
   .then(response => response.json())
   .then(data => {
     document.getElementById("external-json").innerHTML =       data[0].files[0].subject
