--- a/Slack_JSON/upskillChannel.html
+++ b/Slack_JSON/upskillChannel.html
@@ -16,20 +16,30 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
   bottom: 0;
   height: inherit;
 }
+
+body {
+  background-color: #c0c0c0;
+}
+
+.heading {
+  font-weight: 900;
+  font-size: large;
+  text-decoration: underline;
+}
 </style>
 <body>
 
 <!-- Navbar -->
 <div class="w3-container">
   <h1>Upskill Data</h1>
-  <p>External Data from test.json</p>
-  <p id="test"></p>
+  <!-- <p>External Data from test.json</p>
+  <p id="test"></p> -->
   <h2>External Data from Colab Slack Data</h2>
-  <p>SUBJECT:</p>
+  <p class="heading">SUBJECT:</p>
   <p id="external-json"></p>
-  <p>FROM:</p>
+  <p class="heading">FROM:</p>
   <p id="external-json-two"></p>
-  <p>LINKS/PREVIEW:</p>
+  <p class="heading">LINKS/PREVIEW:</p>
   <p id="external-json-three"></p>
 
 </div>
@@ -37,7 +47,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 
 <!-- END MAIN -->
 
-<script type="text/javascript" src="/test.json"></script>
 <script>
 fetch("test.json")
 .then(response => response.json())
