--- a/ComputerSciencePortfolio.html
+++ b/ComputerSciencePortfolio.html
@@ -24,7 +24,7 @@
     </div>
       <!-- Throw links here -->
     <div class="w3-padding-16">
-        <img src="../images/downsizedImages/GreatSandDunesPano.jpg" style="width: 100%">  
+        <img src="images/downsizedImages/TwilightSouthCascades-1.jpg" style="width: 100%; height: 100px;">  
         
         <a href="index.html"  class="w3-button w3-black w3-block w3-hover-teal w3-padding-16"> home </a>
         
