flesh out skills content

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
           <img src="./images/MeSelfieTumalo.jpg" style="width:100%" alt="Avatar">
-          <div class="w3-display-bottomleft w3-container w3-text-black">
+          <div class="w3-display-bottomleft w3-container w3-teal" style="opacity: 90%;">
             <h2 class="w3-text-white" style="text-shadow:1px 1px 0 #000">Ian Snyder</h2>
           </div>
         </div>
@@ -33,16 +33,43 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><i class="fa fa-certificate fa-fw w3-margin-right w3-large w3-text-teal"></i>Software Engineer - Lanscape Photographer</p>
           <p><i class="fa fa-globe fa-fw w3-margin-right w3-large w3-text-teal"></i>Bend, OR</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>isnide23@gmail.com</p>
+          <a href=""><p><i class="fa fa-camera fa-fw w3-margin-right w3-large w3-text-teal"></i>Photography Page</p></a>
           <hr>
 
-          <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
+          <p class="w3-large"><b><i class="fa fa-code fa-fw w3-margin-right w3-text-teal"></i>Programming</b></p>
           <ul>
+            <li>Html &amp; CSS</li>
             <li>Javascript</li>
-            <li>Python</li>
+            <li>Python </li>
+            <li>Ruby</li>
+            <li>Dart &amp; Flutter </li>
+            <li>Elixir &amp; Phoenix</li>
+            <li>React</li>
+            <li>Git &amp; GitHub</li>
+            <li>Test Driven Development</li>
+            <li>Agile Development</li>  
             <li>Lightroom</li>
             <li>Photoshop</li>
           </ul>
           <br>
+
+          <p class="w3-large"><b><i class="fa fa-photo fa-fw w3-margin-right w3-text-teal"></i>Media &amp; Design</b></p>
+          <ul>
+            <li>Landscape Photography</li>
+            <li>Adventure Photography</li>
+            <li>Lightroom</li>
+            <li>Photoshop</li>
+            <li>Premier</li>
+            <li>AfterEffects</li>
+            <li>Illustrator</li>
+          </ul>
+          <br>
+
+          <!-- 
+            Programming: Html & CSS | Javascript | Python | Ruby | Flutter/Dart 
+            Phoenix/Elixir | React | Git/GitHub | Test Driven Development | Agile
+            Adobe Software: Photoshop | Lightroom | Premier | AfterEffects | Illustrator
+           -->
 
           <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
           <ul>
@@ -63,7 +90,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="w3-text-grey w3-padding-16">
           Highly driven to build applications that bring joy and meaning to people&apos;s lives. Searching for employment in an entry level Software, Mobile, or Web Development position learning under experienced mentors. 
         </h2>
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>
+        <h2 class="w3-text-grey w3-padding-16"><i class="w3-margin-right w3-xxlarge w3-text-teal"></i>
           Work Experience
         </h2>
         <div class="w3-container">
@@ -140,7 +167,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <p>Find me on social media.</p>
   <i class="fa fa-instagram w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+  <!-- <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p> -->
 </footer>
 
 </body>
