restore photo site links and images

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><i class="fa fa-certificate fa-fw w3-margin-right w3-large w3-text-teal"></i>Software Engineer - Lanscape Photographer</p>
           <p><i class="fa fa-globe fa-fw w3-margin-right w3-large w3-text-teal"></i>Bend, OR</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>isnide23@gmail.com</p>
-          <a href=""><p><i class="fa fa-camera fa-fw w3-margin-right w3-large w3-text-teal"></i>Photography Page</p></a>
+          <a href="ianSnyderPhotography.html"><p><i class="fa fa-camera fa-fw w3-margin-right w3-large w3-text-teal"></i>Photography Page</p></a>
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-code fa-fw w3-margin-right w3-text-teal"></i>Programming</b></p>
