porfolio statement updates

--- a/gallerypage.html
+++ b/gallerypage.html
@@ -38,23 +38,22 @@ h1 {letter-spacing: 6px}
 <!-- Photo Grid -->
 <div class="w3-row-padding" style="margin-bottom:128px">
   <div class="w3-half">
-    <img src="images/PhotoWebsiteImages/BelknapCraterFireRedSunset.jpg" style="width:100%">
-    <img src="images/PhotoWebsiteImages/BenBrokenTop.jpg" style="width:100%">
-    <img src="images/PhotoWebsiteImages/BlackButteOverlookSantiamSunset.jpg" style="width:100%">
-    <img src="images/PhotoWebsiteImages/BrokenTopRidgeOverlook.jpg" style="width:100%">
-    <img src="images/PhotoWebsiteImages/BrokenTopWhychusMilkyWay.jpg" style="width:100%">
-    <img src="images/PhotoWebsiteImages/ThreeFingerJackSunrise.jpg" style="width:100%">
-    <img src="images/PhotoWebsiteImages/DeeWrightTree.jpg" style="width:100%">
+    <img loading="lazy" src="images/PhotoWebsiteImages/BelknapCraterFireRedSunset.jpg" style="width:100%">
+    <img loading="lazy" src="images/PhotoWebsiteImages/BenBrokenTop.jpg" style="width:100%">
+    <img loading="lazy" src="images/PhotoWebsiteImages/BlackButteOverlookSantiamSunset.jpg" style="width:100%">
+    <img loading="lazy" src="images/PhotoWebsiteImages/BrokenTopRidgeOverlook.jpg" style="width:100%">
+    <img loading="lazy" src="images/PhotoWebsiteImages/BrokenTopWhychusMilkyWay.jpg" style="width:100%">
+    <img loading="lazy" src="images/PhotoWebsiteImages/ThreeFingerJackSunrise.jpg" style="width:100%">
+    <img loading="lazy" src="images/PhotoWebsiteImages/DeeWrightTree.jpg" style="width:100%">
   </div>
 
   <div class="w3-half">
-    <img src="images/PhotoWebsiteImages/DevilsLakeReflection.jpg" style="width:100%">
-    <img src="images/PhotoWebsiteImages/GenesisBachyJeffersonPark.jpg" style="width:100%">
-    <img src="images/PhotoWebsiteImages/HeavySnowToddRidge.jpg" style="width:100%">
-    <img src="images/PhotoWebsiteImages/JeffersonHarvestMoon.jpg" style="width:100%">
-    
-    <img src="images/PhotoWebsiteImages/DeeWrightObservatorySillhoutte.jpg" style="width:100%">
-    <img src="images/PhotoWebsiteImages/LarsTannerUnderBrokenTopAmphitheater.jpg" style="width:100%">
+    <img loading="lazy" src="images/PhotoWebsiteImages/DevilsLakeReflection.jpg" style="width:100%">
+    <img loading="lazy" src="images/PhotoWebsiteImages/GenesisBachyJeffersonPark.jpg" style="width:100%">
+    <img loading="lazy" src="images/PhotoWebsiteImages/HeavySnowToddRidge.jpg" style="width:100%">
+    <img loading="lazy" src="images/PhotoWebsiteImages/JeffersonHarvestMoon.jpg" style="width:100%">
+    <img loading="lazy" src="images/PhotoWebsiteImages/DeeWrightObservatorySillhoutte.jpg" style="width:100%">
+    <img loading="lazy" src="images/PhotoWebsiteImages/LarsTannerUnderBrokenTopAmphitheater.jpg" style="width:100%">
   </div>
 </div>
   
