--- a/ianSnyderPhotography.html
+++ b/ianSnyderPhotography.html
@@ -74,10 +74,10 @@
 <div id="pageContent" class="w3-content w3-padding-large w3-center" id="portfolio" style="background-image: linear-gradient(white, lightgrey); margin-top: -100px;">
 
   <!-- Images (Portfolio) -->
-  <img id="images" src="images/PhotographyPortfolioWebsite/SparksLakeSunsetLenticulars.jpg" alt="Ocean" class="w3-image w3-image w3-padding" width="1000" height="500">
-  <img id="images" src="images/PhotographyPortfolioWebsite/MiataHood.jpg" alt="Ocean" class="w3-image w3-image w3-padding" width="1000" height="500">
-  <img id="images" src="images/PhotographyPortfolioWebsite/TyPowTurnTumalo.jpg" alt="Ocean" class="w3-image w3-image w3-padding" width="1000" height="500">
-  <img id="images" src="images/PhotographyPortfolioWebsite/McNeilPointHoodLenticular.jpg" alt="Ocean" class="w3-image w3-padding" width="1000" height="500">
+  <img id="images" loading="lazy" src="images/PhotographyPortfolioWebsite/SparksLakeSunsetLenticulars.jpg" alt="Ocean" class="w3-image w3-image w3-padding" width="1000" height="500">
+  <img id="images" loading="lazy" src="images/PhotographyPortfolioWebsite/MiataHood.jpg" alt="Ocean" class="w3-image w3-image w3-padding" width="1000" height="500">
+  <img id="images" loading="lazy" src="images/PhotographyPortfolioWebsite/TyPowTurnTumalo.jpg" alt="Ocean" class="w3-image w3-image w3-padding" width="1000" height="500">
+  <img id="images" loading="lazy" src="images/PhotographyPortfolioWebsite/McNeilPointHoodLenticular.jpg" alt="Ocean" class="w3-image w3-padding" width="1000" height="500">
 
   <!-- Contact -->
   <div id="contact-section" data-brackets-id='171' class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top" id="contact">
