--- a/index.html
+++ b/index.html
@@ -48,8 +48,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <li>Git &amp; GitHub</li>
             <li>Test Driven Development</li>
             <li>Agile Development</li>  
-            <li>Lightroom</li>
-            <li>Photoshop</li>
           </ul>
           <br>
 
@@ -88,13 +86,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16">
-          Highly driven to build applications that bring joy and meaning to people&apos;s lives. Searching for employment in an entry level Software, Mobile, or Web Development position learning under experienced mentors. 
+          Highly driven to build applications and make art that brings joy and meaning to people&apos;s lives. 
+          Web Developer, Photographer, Designer. 
         </h2>
         <h2 class="w3-text-grey w3-padding-16"><i class="w3-margin-right w3-xxlarge w3-text-teal"></i>
           Work Experience
         </h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Software Developer -Innovation CoLab</b></h5>
+          <h5 class="w3-opacity"><b>Software Developer - Innovation CoLab</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2021 - September 2023</h6>
           <p>
             <ul>
