update portfolio statement

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16">
-          Highly driven to build applications and make art that brings joy and meaning to people&apos;s lives. 
-          Web Developer, Photographer, Designer. 
+          Web Developer & Photographer. 
+          I am driven to build applications and make art that brings joy and meaning to people&apos;s lives. 
         </h2>
         <h2 class="w3-text-grey w3-padding-16"><i class="w3-margin-right w3-xxlarge w3-text-teal"></i>
           Work Experience
