--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Software Developer - Innovation CoLab</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2021 - September 2022</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2020 - June 2023</h6>
           <p>
             <ul>
               <li>
@@ -119,6 +119,22 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             </li>
             <li>
               Implemented database changes to accommodate new structures which allowed the implementation of more advanced data features and equipment calculation algorithms            </li>
+            <li>
+              Managed client meetings and expectations in one to two week-long Agile project sprints            
+            </li>
+          </ul>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Software Developer - Mazama Media</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>January 2020 - May 2020</h6>
+          <ul>
+            <li>
+              Used Zapier to develop data flows from Facebook Messenger chatbots
+            </li>
+            <li>
+              Implemented rest APIs to collect client data using Python websockets            
+            </li>
             <li>
               Managed client meetings and expectations in one to two week-long Agile project sprints            
             </li>
